tests/fail/ForLoop.java
package fail;

public class ForLoop {
    public static void main(String[] args) {
        System.out.println('a',100);
    
    }
}
